IssueId:- POR-44 Z-index issue was applied on front-page

--- a/style.css
+++ b/style.css
@@ -139,12 +139,12 @@ a{
 }
 
 #greetings {
-    font-size: 1.0rem;
+    font-size: 10.0rem;
     color: #51c0a4;
 }
 
 #name {
-    font-size: 5rem;
+    font-size: 10rem;
     color: #c6dfef;
 }
 
